--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="portfolio" content="Alex_Jam" charset="UTF-8">
-        <title>Alex_Jam's Portfolio</title>
+        <title>Alex_Jam's Resume</title>
         <link rel="stylesheet" href="style.css"></link>
         <link rel="stylesheet" href="styleSVG.css"></link>
         <script src="script.js"></script>
