--- a/index.html
+++ b/index.html
@@ -117,8 +117,22 @@
                                             <h3 class="name">Blender 3D</h3>
                                         </div>
                                     </div>
+                                <div class="card">
+                                    <div class="box">
+                                        <div class="percent">
+                                            <svg>
+                                                <circle cx="50" cy="50" r="50"></circle>
+                                                <circle cx="50" cy="50" r="50"></circle>
+                                            </svg>
+                                        <div class="number">
+                                            <h3>35<span>%</span></h3>
+                                        </div>
+                                    </div>
+                                    <h3 class="name">Python</h3>
                                 </div>
+                            </div>
                         </div>
+                    </div>
                 </div>
                 <div class="inside">
                     <h1>LANGUAGES</h1>
@@ -149,7 +163,7 @@
                                                     <h3>85<span>%</span></h3>
                                                 </div>
                                             </div>
-                                            <h3 class="name">RUSSION</h3>
+                                            <h3 class="name">RUSSIAN</h3>
                                         </div>
                                 </div>
                                     <div class="card">
