--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 LINKS:
                             </td>
                             <td>
-                                <a href="https://gamejolt.com/@AlexJam">My games and drafts</a><br>
+                                <a href="https://drive.google.com/open?id=1Coug4x3mzKy0MMsFoMSpF82XwSe-rNYq">My games and drafts</a><br>
                                 <a href="https://sketchfab.com/Alex_Jam">My models for interior (PBR)</a>
                             </td>
                         </tr>
