--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
                             <p>Physic</p>
                     </div>
                 </div>
+                
+                <div class="inside">
+                    <h1>EXPERIENCE</h1>
+                    <p>Sep 2017 - Jul 2019</p>
+                    <div class="text">
+                        <h2>Freelance</h2>
+                        <p>Helping with different parst of developing. Can look in "My games and drafts"</p>
+                    </div>
+                    <br>
+                    <p>Sep 2019 - Dec 2020</p>
+                    <div class="text">
+                            <h2>CNU them. Bogdan Khmelnitsky</h2>
+                            <p>Physic</p>
+                    </div>
+                </div>
 
                 <div class="inside">
                     <h1>SKILLS</h1>
